Updated using Colaboratory

--- a/ai-sum.ipynb
+++ b/ai-sum.ipynb
@@ -1,6 +1,11 @@
 {
- "cells": [],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "metadata": {
+    "colab": {
+      "name": "ai-sum.ipynb",
+      "provenance": []
+    }
+  },
+  "cells": []
 }
