updated using Colaboratory

--- a/hello-ml-mnist.ipynb
+++ b/hello-ml-mnist.ipynb
@@ -1,6 +1,361 @@
 {
- "cells": [],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "metadata": {
+    "colab": {
+      "name": "hello-ml-mnist.ipynb",
+      "provenance": []
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IS7U691_TSdH"
+      },
+      "source": [
+        "import tensorflow as tf"
+      ],
+      "id": "IS7U691_TSdH",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zoGrVh3iTUS4"
+      },
+      "source": [
+        "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()"
+      ],
+      "id": "zoGrVh3iTUS4",
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F1X93LYnTuML",
+        "outputId": "e2bc3c90-3256-4263-efa1-027258e3c5fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x_train.shape"
+      ],
+      "id": "F1X93LYnTuML",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000, 28, 28)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WAGF232RVvI-",
+        "outputId": "ea1a67aa-9024-4df3-a5b9-63d731b96997",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_train.shape"
+      ],
+      "id": "WAGF232RVvI-",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jox3p56hab3J",
+        "outputId": "81863317-9594-401c-c769-402f6e76dd3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_train[20]"
+      ],
+      "id": "jox3p56hab3J",
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m9cbe5rPXnV6"
+      },
+      "source": [
+        "model = tf.keras.Sequential([tf.keras.layers.Flatten(input_shape=(28,28)),\n",
+        "  tf.keras.layers.Dense(128, activation='relu'),\n",
+        "  tf.keras.layers.Dense(128, activation='relu'),\n",
+        "  tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])"
+      ],
+      "id": "m9cbe5rPXnV6",
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m_F50C2SZlW6",
+        "outputId": "8a4c3c3d-1864-4f16-e44d-443027c24d93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "id": "m_F50C2SZlW6",
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "flatten (Flatten)            (None, 784)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_6 (Dense)              (None, 128)               100480    \n",
+            "_________________________________________________________________\n",
+            "dense_7 (Dense)              (None, 128)               16512     \n",
+            "_________________________________________________________________\n",
+            "dense_8 (Dense)              (None, 10)                1290      \n",
+            "=================================================================\n",
+            "Total params: 118,282\n",
+            "Trainable params: 118,282\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D-B9Ma2BY_I0",
+        "outputId": "889be329-6017-46bd-9cf5-a61a3c452b25",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 306
+        }
+      },
+      "source": [
+        "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam')"
+      ],
+      "id": "D-B9Ma2BY_I0",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-48-aa9d94fbae71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sparse_categorical_crossentropy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'adam'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mcompile\u001b[0;34m(self, optimizer, loss, metrics, loss_weights, weighted_metrics, run_eagerly, steps_per_execution, **kwargs)\u001b[0m\n\u001b[1;32m    532\u001b[0m           \u001b[0msteps_per_execution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'experimental_steps_per_execution'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    533\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 534\u001b[0;31m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    535\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_run_eagerly\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_eagerly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36m_validate_compile\u001b[0;34m(self, optimizer, metrics, **kwargs)\u001b[0m\n\u001b[1;32m   2518\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minvalid_kwargs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2519\u001b[0m       raise TypeError('Invalid keyword argument(s) in `compile`: %s' %\n\u001b[0;32m-> 2520\u001b[0;31m                       (invalid_kwargs,))\n\u001b[0m\u001b[1;32m   2521\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2522\u001b[0m     \u001b[0;31m# Model must be created and compiled with the same DistStrat.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: Invalid keyword argument(s) in `compile`: {'validation_data'}"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SiV6sQmXZYH4",
+        "outputId": "2931a9c8-906f-42dc-9d4a-0afec6df9425",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.fit(x=x_train, y=y_train, epochs=20, validation_data=(x_test, y_test))"
+      ],
+      "id": "SiV6sQmXZYH4",
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0771 - val_loss: 0.1688\n",
+            "Epoch 2/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0753 - val_loss: 0.2121\n",
+            "Epoch 3/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0682 - val_loss: 0.2080\n",
+            "Epoch 4/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0698 - val_loss: 0.2353\n",
+            "Epoch 5/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0669 - val_loss: 0.2644\n",
+            "Epoch 6/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0705 - val_loss: 0.1767\n",
+            "Epoch 7/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0576 - val_loss: 0.1831\n",
+            "Epoch 8/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0663 - val_loss: 0.2373\n",
+            "Epoch 9/20\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0639 - val_loss: 0.2059\n",
+            "Epoch 10/20\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0572 - val_loss: 0.2324\n",
+            "Epoch 11/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0589 - val_loss: 0.2298\n",
+            "Epoch 12/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0600 - val_loss: 0.2295\n",
+            "Epoch 13/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0629 - val_loss: 0.2145\n",
+            "Epoch 14/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0533 - val_loss: 0.2566\n",
+            "Epoch 15/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0579 - val_loss: 0.2585\n",
+            "Epoch 16/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0638 - val_loss: 0.2631\n",
+            "Epoch 17/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0563 - val_loss: 0.3164\n",
+            "Epoch 18/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0525 - val_loss: 0.3507\n",
+            "Epoch 19/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0513 - val_loss: 0.3085\n",
+            "Epoch 20/20\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0548 - val_loss: 0.2908\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fdf7da59b10>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SHI-31I0Z1WC",
+        "outputId": "c787dcb6-1935-48e6-cb02-a5633001860a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.predict(x_train)[1].argmax()"
+      ],
+      "id": "SHI-31I0Z1WC",
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PIUn7i9SdPHu",
+        "outputId": "07198e09-0897-4857-c2d9-b78588ed9557",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_train[1]"
+      ],
+      "id": "PIUn7i9SdPHu",
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ExbC0XjPddp9"
+      },
+      "source": [
+        ""
+      ],
+      "id": "ExbC0XjPddp9",
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
